fix: force gsc-comments-count colour for light and dark mode

--- a/static/css/giscus-custom.css
+++ b/static/css/giscus-custom.css
@@ -94,6 +94,10 @@ main {
   --color-social-reaction-bg-reacted-hover: var(--color-scale-blue-1);
 }
 
+.gsc-comments-count {
+  color: #1F2328 !important;
+}
+
 main .pagination-loader-container {
   background-image: url("https://github.com/images/modules/pulls/progressive-disclosure-line.svg");
 }
